--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Playfair+Display&display=swap');
 
 /* GENERAL STYLING */
 
@@ -6,13 +7,17 @@ html,
 body {
   height: 100%;
   width: 100%;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Playfair Display', serif;
   color: #222;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Bangers', cursive;
 }
 
 /* NAVBAR */
 .logo {
-    width: 75px;
+    width: 50px;
     height: auto;
 }
 
@@ -28,7 +33,10 @@ body {
   font-size: 1.1em !important;
 }
 
-
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
 
 
 
