--- a/style.css
+++ b/style.css
@@ -1,18 +1,62 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Playfair+Display&display=swap');
 
-/* GENERAL STYLING */
+/* 
+GENERAL NOTES:
+When using margin and padding sizing, use 'em'
+When using text sizing, use 'rem' 
+Media queries are typically done in 300, 600, and 900 */
 
-html,
-body {
-  height: 100%;
-  width: 100%;
-  font-family: 'Playfair Display', serif;
-  color: #222;
+/* Import google fonts */
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap');
+
+/* CUSTOM PROPERTIES */
+:root {
+  /* font families */
+  --ff-primary: 'Source Sans Pro', sans-serif;
+  --ff-secondary: 'Source Code Pro', monospace;
+
+  /* font weights */
+  --fw-reg: 300;
+  --fw-bold: 900;
+
+  /* colors */
+  --clr-light: white;
+  --clr-dark: #303030;
+  --clr-accent: #16e0bd;
+
+  /* font sizes */
+  --fs-h1: 3rem;
+  --fs-h2: 2.25rem;
+  --fs-h3: 1.25rem;
+  --fs-body: 1rem;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: 'Bangers', cursive;
+/* With screen size change, adjust the font sizes */
+@media (min-width: 768px) {
+  :root {
+      --fs-h1: 4.5rem;
+      --fs-h2: 3.75rem;
+      --fs-h3: 1.5rem;
+      --fs-body: 1.25rem;
+  }
+}
+
+/* GENERAL STYLING */
+body {
+  background: var(--clr-light);
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  color: var(--clr-dark);
+  font-family: var(--ff-primary);
+  font-size: var(--fs-body);
+  line-height: 1.6;
+
+}
+
+/* When someone tabs onto this and focuses, it has an outline */
+:focus {
+  outline: 3px solid var(--clr-accent);
+  outline-offset: 3px;
 }
 
 /* NAVBAR */
@@ -33,10 +77,52 @@ h1, h2, h3, h4, h5 {
   font-size: 1.1em !important;
 }
 
+/* WELCOME */
+#welcome-logo {
+  width: 50%;
+  height: auto;
+  padding: 2em;
+}
+
+/* CAROUSEL */
 .carousel-inner img {
   width: 100%;
   height: 100%;
 }
+
+.carousel-caption {
+  font-size: 1.3rem;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+/* CONNECT */
+.social a {
+  font-size: 3em;
+  padding: 3rem;
+}
+
+.fa-facebook {
+  color: #3b5998;
+}
+
+.fa-twitter {
+  color: #00aced;
+}
+
+.fa-instagram {
+  color: #517fa8;
+}
+
+.fa-facebook:hover,
+.fa-twitter:hover,
+.fa-instagram:hover {
+  color: #d5d5d5;
+}
+
+/* FOOTER */
+
 
 
 
