--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ body {
 
 /* CONNECT */
 .social a {
-  font-size: 3em;
-  padding: 3rem;
+  font-size: 2.5em;
+  padding: 0rem 2rem;
 }
 
 .fa-facebook {
@@ -122,6 +122,9 @@ body {
 }
 
 /* FOOTER */
+footer p {
+  font-size: 2rem;
+}
 
 
 
